# oop2025

./: CMakeLists.txt  README.md
lw1/Crypt/: Crypt.cpp  Crypt.sln  Crypt.vcxproj  Crypt.vcxproj.filters  Test.bat  input.txt  output.txt
lw1/Crypt/test_data/: allSymbols_crypt.txt  incorrect_type.txt  invalid_count_arg.txt
lw1/Fill/: Fill.cpp  Fill.sln  Fill.vcxproj  Fill.vcxproj.filters  Test.bat  input.txt
lw1/Fill/test_data/: out_many_start_point.txt  out_many_start_point_indoor.txt  out_start_point_outdoor.txt  out_without_start_point.txt  without_start_point.txt
lw1/InvertMatrix/: InvertMatrix.cpp  InvertMatrix.sln  InvertMatrix.vcxproj  InvertMatrix.vcxproj.filters  Test.bat
lw1/InvertMatrix/test_data/: good_matrix2_3x3.txt  good_matrix_3x3.txt  matrix_4x4.txt  matrix_det0.txt  matrix_with_letters.txt
lw1/Radix/: Radix.cpp  Radix.sln  Radix.vcxproj  Radix.vcxproj.filters  Test.bat
lw1/Radix/test_data/: incorrect_data.txt  invalid_arg_count.txt  radix_10_36_1370040147.txt  radix_10_36_1743202833.txt  radix_int_min.txt
lw1/ReplaceString/: ReplaceString.cpp  ReplaceString.sln  ReplaceString.vcxproj  ReplaceString.vcxproj.filters  Test.bat  output.txt
lw1/ReplaceString/tests/: mother-ma-mama.txt  mother.txt  repeatSymbols-replace-qweqwe-qwe.txt  repeatSymbols.txt  song-replace-a-empty.txt  song-replace-line-square.txt
lw2/Dictionary/: Dictionary.cpp  Dictionary.vcxproj  Dictionary.vcxproj.filters  DictionaryModule.cpp  DictionaryModule.h  Logic.cpp  Logic.h  UI.cpp  UI.h  dictionary.txt
lw2/Dictionary-tests/: Dictionary-tests.cpp  Dictionary-tests.vcxproj  Dictionary-tests.vcxproj.filters
lw2/DictionaryTask/Dictionary/: Dictionary.cpp  Dictionary.sln  Dictionary.vcxproj  Dictionary.vcxproj.filters  Logic.cpp  Logic.h  UI.cpp  UI.h
lw2/DictionaryTask/Dictionary-tests/: Dictionary-tests.cpp  Dictionary-tests.vcxproj  Dictionary-tests.vcxproj.filters
lw2/HTML Decode/HTML_Decode-tests/: HTML_Decode-tests.cpp  HTML_Decode-tests.vcxproj  HTML_Decode-tests.vcxproj.filters
lw2/HTML Decode/ParseURL/: FuncOfDecode.cpp  HTMLDecode.h  HTML_Decode.sln  Html_Decode.cpp  ParseURL.vcxproj.filters
lw2/HTML_Decode-tests/: HTML_Decode-tests.cpp  HTML_Decode-tests.vcxproj  HTML_Decode-tests.vcxproj.filters
lw2/ParseExpression/: ParseExpression.sln  ParseExpression.vcxproj  ParseExpression.vcxproj.filters  ParseExpressionModule.h  Parsing.cpp
lw2/ParseURL/: FuncOfDecode.cpp  ParseURL.cpp  ParseURL.vcxproj  ParseURL.vcxproj.filters  modules.h
lw2/PrimeNumber-tests/: PrimeNumber-tests.cpp  PrimeNumber-tests.vcxproj
lw2/PrimeNumbers/: PrimeNumberFunc.h  PrimeNumbers.cpp  PrimeNumbers.sln  PrimeNumbers.vcxproj.filters  TheSieveOfErotosfen.cpp
lw2/Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
lw2/Vector_task2/: MultiplyElementOfVector.cpp  Vector_task2.cpp  Vector_task2.vcxproj  Vector_task2.vcxproj.filters  modules.h
lw3/: CMakeLists.txt
lw3/Bank/: CMakeLists.txt
lw3/Bank/CBank/: Actor.cpp  Actor.h  Actors.cpp  Actors.h  CBank.cpp  CBank.h  Simulation.cpp  Simulation.h  main.cpp
lw3/Bank/CBankTests/: BankTests.cpp  CMakeLists.txt
lw3/CCar/Car/: Car.cpp  (+6 more)
lw3/Calculator/: CMakeLists.txt  Calculator.drawio
lw3/Calculator/Calculator/: CFunction.cpp  CFunction.h  CObservable.cpp  CObservable.h  CVariable.cpp  CVariable.h  Calculator.cpp  Calculator.h  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  CalculatorUI.cpp  CalculatorUI.h  IObservable.h  IObserver.h  IValue.h  main.cpp
lw3/Calculator/CalculatorTests/: CMakeLists.txt  Calculator_Tests.cpp
lw3/Car/: Car.h  Car.sln  GUIOfCar.cpp  GUIOfCar.h
lw3/Car-tests/: Car-tests.cpp  Car-tests.vcxproj
lw4/: CMakeLists.txt
lw4/Shapes/: CMakeLists.txt
lw4/Shapes/CShapes/: CCanvas.cpp  CCanvas.h  CCircle.cpp  CCircle.h  CController.cpp  CController.h  CLineSegment.cpp  CLineSegment.h  CMockCanvas.h  CPoint.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  ICanvas.h  IShape.h  ISolidShape.h  image.txt  main.cpp
lw4/Shapes/CShapesTests/: CMakeLists.txt  CShapesTests.cpp
lw5/: CMakeLists.txt  README.md
lw5/Date/: CMakeLists.txt
lw5/Date/CDate/: CDate.cpp  CDate.h  main.cpp
lw5/Date/DateTests/: CMakeLists.txt  DateTests.cpp
lw5/String/: CMakeLists.txt
lw5/String/CString/: CString.cpp  CString.h  main.cpp
lw5/String/StringTests/: CMakeLists.txt  StringTests.cpp
lw6/: CMakeLists.txt
lw6/EquationRoot4/: CMakeLists.txt
lw6/EquationRoot4/CEquationRoot4/: CEquationRoot4.cpp  CEquationRoot4.h  main.cpp
lw6/EquationRoot4/EquationRoot4Tests/: CMakeLists.txt  EquationRoot4Tests.cpp
lw6/StringList/: CMakeLists.txt
lw6/StringList/src/: IteratorStringList.h  Node.h  StringList.cpp  StringList.h
lw6/StringList/test/: CMakeLists.txt  test.cpp
(+30 files in other folders)
